Docker fix